--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.6
   http: ^0.13.5  # Added http package
+  youtube_player_flutter: ^8.1.2
+
 
 dev_dependencies:
   flutter_test:
