--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,14 +11,17 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.6
-  http: ^0.13.5  # Added http package
-  youtube_player_flutter: ^8.1.2
+  http: ^1.2.2  # Added http package
+  youtube_player_flutter: ^9.0.3
+  provider: ^6.0.0
+  auto_orientation: ^2.2.0
+
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 flutter:
   uses-material-design: true
